--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "googleapis": "^161.0.0",
-    "next": "15.5.4",
+    "next": "^16.1.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "replicate": "^1.2.0",
